Fix alignment

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ iframe {
     padding: 4px;
 }
 .patches {
-    margin-right: 36em;
+    margin-right: 38em;
     min-height: 5em;
 }
 .patches > li {
@@ -88,6 +88,7 @@ iframe {
 .results {
     float: right;
     width: 34em;
+    padding: 0;
 }
 .results .os {
     float: left;
